--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment # Kubernetes resource kind we are creating
 metadata:
-  name: spring-boot-k8s-deployment
+  name: nodejs-webapp-deployment
 spec:
   selector:
     matchLabels:
-      app: spring-boot-k8s
+      app: nodejs-webapp
   replicas: 2 # Number of replicas that will be created for this deployment
   template:
     metadata:
       labels:
-        app: spring-boot-k8s
+        app: nodejs-webapp
     spec:
       containers:
-        - name: spring-boot-k8s
-          image: javatechie/devops-integration # Image that will be used to containers in the cluster
+        - name: nodejs-webapp
+          image: srinisdockerepo/nodejs:$BUILD_NUMBER # Image that will be used to containers in the cluster
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080 # The port that the container is running on in the cluster
@@ -25,10 +25,10 @@ spec:
 apiVersion: v1 # Kubernetes API version
 kind: Service # Kubernetes resource kind we are creating
 metadata: # Metadata of the resource kind we are creating
-  name: springboot-k8ssvc
+  name: nodejs-webapp-svc
 spec:
   selector:
-    app: spring-boot-k8s
+    app: nodejs-webapp
   ports:
     - protocol: "TCP"
       port: 8080 # The port that the service is running on in the cluster
