--- a/nodejsapp.yaml
+++ b/nodejsapp.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     app: nodejs-app
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: nodejs-app
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: nodejs-app
-        image: "srinisdockerepo/nodejs:$BUILD_NUMBER"
+        image: "srinisdockerepo/nodejs:48"
         ports:
           - containerPort: 3000
 ---
