--- a/nodejsapp.yaml
+++ b/nodejsapp.yaml
@@ -32,6 +32,6 @@ spec:
     app: nodejs-app
   type: LoadBalancer
   ports:
-  - protocol: HTTP
+  - protocol: TCP
     targetPort: 3000
-    port: 80
+    port: 3000
