--- a/nodejsapp.yaml
+++ b/nodejsapp.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: nodejs-app
-        image: "srinisdockerepo/nodejs:52"
+        image: "srinisdockerepo/nodejs:56"
         ports:
           - containerPort: 3000
 ---
@@ -32,6 +32,7 @@ spec:
     app: nodejs-app
   type: LoadBalancer
   ports:
-  - protocol: TCP
+  - name: http
+    protocol: TCP
     targetPort: 3000
-    port: 3000
+    port: 80
