--- a/node_deployment.yaml
+++ b/node_deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
       - name: webapp-nodejs
-        image: docker.io/srinisdockerepo/nodejs:65
+        image: docker.io/srinisdockerepo/nodejs:66
+        imagePullPolicy: Always
         ports:
           - containerPort: 3000
