--- a/node_deployment.yaml
+++ b/node_deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nodejs-deployment
+  namespace: mongo
 spec:
   replicas: 2
   selector:
@@ -14,7 +15,7 @@ spec:
     spec:
       containers:
       - name: nodejs-app
-        image: srinisdockerepo/nodejs:9
+        image: srinisdockerepo/nodejs:10
         imagePullPolicy: Always
         ports:
           - containerPort: 8080
