--- a/node_deployment.yaml
+++ b/node_deployment.yaml
@@ -19,3 +19,19 @@ spec:
         imagePullPolicy: Always
         ports:
           - containerPort: 8080
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nodejs-app
+  namespace: mongo
+spec:
+  selector:
+    app: nodejs-app
+  type: LoadBalancer
+  ports:
+  - name: http
+    protocol: TCP
+    targetPort: 8080
+    port: 80
