--- a/node_deployment.yaml
+++ b/node_deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: nodejs-app
-        image: srinisdockerepo/nodejs:replaceImageTag
+        image: srinisdockerepo/nodejs:31
         imagePullPolicy: Always
         ports:
           - containerPort: 8080
