--- a/manifest_files/node_deployment.yaml
+++ b/manifest_files/node_deployment.yaml
@@ -1,1 +1,36 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nodejs-deployment
+  namespace: mongo
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: nodejs-app
+  template:
+    metadata:
+      labels:
+        app: nodejs-app
+    spec:
+      containers:
+      - name: nodejs-app
+        image: srinisdockerepo/nodejs:33
+        imagePullPolicy: Always
+        ports:
+          - containerPort: 8080
 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nodejs-app
+  namespace: mongo
+spec:
+  selector:
+    app: nodejs-app
+  type: LoadBalancer
+  ports:
+  - protocol: TCP
+    targetPort: 8080
+    port: 80
